--- a/css/styles.css
+++ b/css/styles.css
@@ -12736,8 +12736,9 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
           box-sizing: border-box;
 }
 
-body {
-  font-family: "Montserrat Alternates", sans-serif;
-  background-color: #00d1b2;
+#hero {
+  background: url("../images/macbook-air.jpg");
+  height: 500px;
+  background-size: cover;
 }
 /*# sourceMappingURL=styles.css.map */
