Added contact section

--- a/css/styles.css
+++ b/css/styles.css
@@ -12747,4 +12747,19 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
       -ms-flex-pack: center;
           justify-content: center;
 }
+
+#contact {
+  background: url("../images/contact-us.jpg");
+  background-size: cover;
+}
+
+@media screen and (max-width: 768px) {
+  #contact .quotes p,
+  #contact .quotes span {
+    font-size: 1.5rem !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    text-align: center !important;
+  }
+}
 /*# sourceMappingURL=styles.css.map */
